# lp-ft_ntk

./: .gitignore  LICENSE  README.md  arguments.py  pyproject.toml  run.py  run_ntk.py
model/: sequence_classification.py  utils.py
model/gpt2/: __init__.py  configuration_gpt2.py  modeling_gpt2.py  tokenization_gpt2.py  tokenization_gpt2_fast.py  tokenization_gpt2_tf.py
model/lora/: layers.py  utils.py
model/roberta/: __init__.py  configuration_roberta.py  convert_roberta_original_pytorch_checkpoint_to_pytorch.py  modeling_flax_roberta.py  modeling_roberta.py  modeling_tf_roberta.py  tokenization_roberta.py  tokenization_roberta_fast.py
scripts/evaluation_scripts/ft/: run_amazon_roberta.sh  run_boolq_roberta.sh  run_cb_roberta.sh  run_cola_roberta.sh  run_mrpc_roberta.sh  run_pubmed_roberta.sh  run_rte_roberta.sh  run_sst2_roberta.sh  run_wic_roberta.sh  run_wsc_roberta.sh
scripts/evaluation_scripts/lora/: run_amazon_roberta.sh  run_boolq_roberta.sh  run_cb_roberta.sh  run_cola_roberta.sh  run_mrpc_roberta.sh  run_pubmed_roberta.sh  run_rte_roberta.sh  run_sst2_roberta.sh  run_wic_roberta.sh  run_wsc_roberta.sh
scripts/evaluation_scripts/lp_ft/: run_amazon_roberta.sh  run_boolq_roberta.sh  run_cb_roberta.sh  run_cola_roberta.sh  run_mrpc_roberta.sh  run_pubmed_roberta.sh  run_rte_roberta.sh  run_sst2_roberta.sh  run_wic_roberta.sh  run_wsc_roberta.sh
scripts/evaluation_scripts/lp_lora/: run_amazon_roberta.sh  run_boolq_roberta.sh  run_cb_roberta.sh  run_cola_roberta.sh  run_mrpc_roberta.sh  run_pubmed_roberta.sh  run_rte_roberta.sh  run_sst2_roberta.sh  run_wic_roberta.sh  run_wsc_roberta.sh
scripts/ntk_scripts/: run_ntk.sh
tasks/: get_trainer.py  utils.py
tasks/glue/: dataset.py
tasks/ood/: dataset.py  ood_metric.py
tasks/ood/OOD_NLP/src/evaluations/: method-nlu.py
tasks/ood/OOD_NLP/src/utils/: __init__.py
tasks/pubmed/: dataset.py  pubmed_metric.py
tasks/pubmed/pubmed-rct/: README.md
tasks/superglue/: dataset.py
training/: kernel_trainer.py  linearhead_trainer.py
utils/: custom_metric.py  kernel_solvers.py  run_utils.py
